add current user endpoint
